# plugin_ConvectionDiffusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  convection_diffusion.cpp  convection_diffusion.h  convection_diffusion_base.cpp  convection_diffusion_base.h  convection_diffusion_common.h  convection_diffusion_fe.h  convection_diffusion_fv1.h  convection_diffusion_fvcr.h  convection_diffusion_fvho.h  convection_diffusion_plugin.cpp  convection_diffusion_plugin.h  convection_diffusion_plugin_Kopie.cpp  convection_diffusion_pybind.cpp  convection_diffusion_sss.h
bnd/: outflow_base.cpp  outflow_base.h
doc/: doxy_convdiff_config.txt
fe/: convection_diffusion_fe.cpp  convection_diffusion_fe.h  convection_diffusion_stab_fe.cpp  convection_diffusion_stab_fe.h
fractfv1/: convection_diffusion_fractfv1.cpp  convection_diffusion_fractfv1.h
fv/: convection_diffusion_fv.cpp  convection_diffusion_fv.h
fv1/: .gitignore  convection_diffusion_fv1.cpp  convection_diffusion_fv1.h
fv1/bnd/: outflow_fv1.cpp  outflow_fv1.h
fv1_cutElem/: Info File 1  Info File 2  convection_diffusion_fv1 Kopie.cpp  convection_diffusion_fv1 Kopie.h  convection_diffusion_fv1_cutElem.cpp  convection_diffusion_fv1_cutElem.h
fv1_cutElem/diffusion_interface/: ___immersed_bnd_cond_diffusion_impl.h  diffusion_interface Kopie.h  diffusion_interface.h  diffusion_interface_impl Kopie.h  diffusion_interface_impl.h  loc_to_glob_mapper_diffusion.h  loc_to_glob_mapper_diffusion_impl.h
fv1_cutElem/ug4-Versions__instead_merge_changes_into_fv1_original___/: convection_diffusion_fv1_Nitsche_Juli.cpp  convection_diffusion_fv1_Nitsche_Juli.h  convection_diffusion_fv1_last.cpp  convection_diffusion_fv1_last.h  convection_diffusion_fv1_mitJump.cpp  convection_diffusion_fv1_mitJump.h
fvcr/: convection_diffusion_fvcr.cpp  convection_diffusion_fvcr.h
lua/: lua-include.lua
mixed-fem/: weak_form_rt.cpp  weak_form_rt.h
